feat: first draft

--- a/config/settings.json
+++ b/config/settings.json
@@ -5,12 +5,12 @@
   "image": "tenk-logo.png",
   "social": [
     {
-      "href": "https://discord.com/invite/UY9Xf2k",
+      "href": "https://discord.gg/cehMwY7PkY",
       "img":  "discord.svg",
       "alt": "Discord"
     },
     {
-      "href": "https://twitter.com/TenKBay",
+      "href": "https://twitter.com/hamstervillage_",
       "img":  "twitter.svg",
       "alt": "Twitter"
     }
