feat: testnet contract

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,8 +1,8 @@
 {
-  "author": "@TenKBay",
-  "siteUrl": "https://tenk-dao.github.io/frontend-starter",
-  "contractName": "v2.tenk.testnet",
-  "image": "tenk-logo.png",
+  "author": "@HamsterVillage_",
+  "siteUrl": "https://hamstervillage.pages.dev/",
+  "contractName": "ribity.tenk.testnet",
+  "image": "social.png",
   "social": [
     {
       "href": "https://discord.gg/cehMwY7PkY",
