feat: mainnet contract added

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,7 +1,7 @@
 {
   "author": "@HamsterVillage_",
   "siteUrl": "https://hamstervillage.pages.dev/",
-  "contractName": "hv.tenk.testnet",
+  "contractName": "nft.hamster_village.near",
   "image": "social.png",
   "social": [
     {
